# txpress

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  sqlx-data.json
data-providers/: Cargo.toml
data-providers/src/: lib.rs  searches.rs  taxi_ranks.rs  taxis.rs
database/: Cargo.toml
database-derive/: Cargo.toml
database-derive/src/: lib.rs
database/src/: bookings.rs  lib.rs
domain/: Cargo.toml
domain/src/: entity.rs  lib.rs  usecase.rs
domain/src/entity/: booking.rs  journey.rs  journey_criteria.rs  price.rs  search.rs  search_criteria.rs  searched_taxi.rs  station.rs  taxi.rs  taxi_owner.rs  taxi_with_owner.rs
domain/src/usecase/: booking.rs  search.rs  stand.rs  taxi.rs
domain/src/usecase/booking/: perform_booking.rs
domain/src/usecase/search/: fetch_taxis.rs  get_selected_taxi.rs
domain/src/usecase/stand/: add_stands.rs  get_all_stand.rs  get_stand.rs
domain/src/usecase/taxi/: add_taxi.rs  get_journey_departure_schedule.rs  get_taxi.rs  get_taxi_owner.rs  perform_journey.rs
migrations/: 20230524184716_taxis.down.sql  20230524184716_taxis.up.sql  20230524201531_taxi_owners.down.sql  20230524201531_taxi_owners.up.sql  20230524222147_stations.up.sql  20230524222345_trips.up.sql  20230526232207_trips.down.sql  20230526232207_trips.up.sql  20230527012931_taxi_ranks.down.sql  20230527012931_taxi_ranks.up.sql  20230528010413_trips.down.sql  20230528010413_trips.up.sql  20230601092005_taxi_ranks.down.sql  20230601092005_taxi_ranks.up.sql  20230601092102_taxis.down.sql  20230601092102_taxis.up.sql  20230601092135_taxi_owners.down.sql  20230601092135_taxi_owners.up.sql  20230601092256_trips.up.sql  20230601092503_bookings.down.sql  20230601092503_bookings.up.sql
server/: Cargo.toml
server/src/: cors.rs  errors.rs  guards.rs  lib.rs  main.rs  searches.rs  taxi_ranks.rs  taxis.rs  utils.rs
server/src/guards/: taxi_owner.rs
taxis/: Cargo.toml
taxis/src/: controllers.rs  data.rs  entity.rs  errors.rs  lib.rs  password.rs  usecase.rs
taxis/src/controllers/: errors.rs  journey.rs  login.rs  registration.rs  taxi_ranks.rs  user.rs
taxis/src/data/: journey_data_provider.rs  login_data_provider.rs  registration_data_provider.rs  taxi_ranks_data_provider.rs
taxis/src/entity/: journey.rs  journey_criteria.rs  owner.rs  stand.rs  taxi.rs
taxis/src/guards/: user.rs
taxis/src/usecase/: add_taxi.rs  add_taxi_ranks.rs  cancel_journey.rs  close_journey.rs  does_booking_exists_on_journey.rs  does_taxi_exists.rs  get_all_journey.rs  get_all_stand.rs  get_in_progress_journey.rs  get_journey.rs  get_owner.rs  get_stand.rs  has_a_journey_in_progress.rs  perform_journey.rs
