[package]
name = "data-providers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.domain]
version = "0.1.0"
path = "../domain"

[dependencies.database-derive]
version = "0.1.0"
path = "../database-derive"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.3"
features = ["sqlx_postgres"]

[dependencies.rocket]
version = "0.5.0-rc.3"

[dependencies.async-trait]
version = "0.1"

[dependencies.sqlx]
version = "0.6"
features = ["migrate", "uuid", "time", "chrono", "offline"]

[dependencies.uuid]
version = "1.3"

[dependencies.log]
version = "0.4"

[dependencies.chrono]
version = "0.4"