[package]
name = "database-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.syn]
version = "2.0"

[dependencies.quote]
version = "1.0"

[dependencies.proc-macro2]
version = "1.0"