[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket_db_pools]
version = "0.1.0-rc.3"
features = ["sqlx_postgres"]

[dependencies.rocket]
version = "0.5.0-rc.3"

[dependencies.sqlx]
version = "0.6"