[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.3"
features = ["v4", "fast-rng"]

[dependencies.async-trait]
version = "0.1"

[dependencies.chrono]
version = "0.4"
features = ["clock"]