[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.database]
version = "0.1.0"
path = "../database"

[dependencies.taxis]
version = "0.1.0"
path = "../taxis"

[dependencies.rocket]
version = "0.5.0-rc.3"

[dependencies.dotenvy]
version = "0.15"

#[dependencies.qrcodegen]
#version = "1.8.0"

[dependencies.log]
version = "0.4"